# LAB

./: .gitignore
CAD/: gripper_large_left.stl  gripper_large_left.stp  gripper_large_right.stp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/ur3_interfaces/: CMakeLists.txt  package.xml
src/ur3_interfaces/msg/: CanDetection.msg  CanDetectionArray.msg
src/ur3_interfaces/srv/: ForwardKinematics.srv  InverseKinematics.srv
src/ur3_project/: CMakeLists.txt  README.md  TODO  package.xml  setup.py
src/ur3_project/config/: initial_positions.yaml  moveit_controllers.yaml  moveit_joint_limits.yaml  moveit_kinematics.yaml  moveit_ompl_planning.yaml  robot_calibration.yaml  ur3_controllers.yaml
src/ur3_project/launch/: pick_place_moveit.launch.py  view_ur3_camera.launch.py
src/ur3_project/meshes/gripper/: gripper_large_right.stl
src/ur3_project/rviz/: moveit_pick_place_debug.rviz  moveit_pick_place_sim.rviz  view_ur3_camera.rviz
src/ur3_project/scripts/: native_vision_node.py
src/ur3_project/src/: depth_camera_node.py  pick_place_manager_node.py  planning_scene_manager_node.py  rviz_visualizer_node.py
src/ur3_project/urdf/: camera.urdf.xacro  gripper.urdf.xacro  ur.ros2_control.xacro  ur3.srdf.xacro  ur3_camera_gripper.urdf.xacro  ur3_macro.xacro
